praxis-rs/tui/src/chatwidget/snapshots/praxis_tui__chatwidget__tests__guardian_approved_exec_renders_approved_request.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---
✔ Auto-reviewer approved codex to run rm -f /tmp/guardian-approved.sqlite this
  time


› Ask Praxis to do anything

  gpt-5.3-codex default · 100% left · /tmp/project
