praxis-rs/tui/src/chatwidget/snapshots/praxis_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"                                                                                "
"› Ask Praxis to do anything                                                      "
"                                                                                "
"  gpt-5.3-codex default · 100% left · /tmp/project                              "
